ensure visibility of podcast episode table on smaller screens

--- a/airtime_mvc/public/css/styles.css
+++ b/airtime_mvc/public/css/styles.css
@@ -4090,7 +4090,7 @@ li .ui-state-hover {
     -o-flex: 1 100%;
     flex: 1 100%;
     /*margin: 4px 0 0 !important;*/
-    min-height: 0;
+    min-height: 200px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
